book/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book
  labels:
    app: book
spec:
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
      - name: book
        image: hashbang/book
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: book
  labels:
    app: book
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: book
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.kubernetes.io/hostname: book.hashbang.sh
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - book.hashbang.sh
    secretName: book-tls
  rules:
  - host: book.hashbang.sh
    http:
      paths:
      - backend:
          service:
            name: book
            port:
              number: 80
        path: /
        pathType: Prefix
